# Todo_App

./: .gitignore  main.py
Phase-1/: .gitignore  PHASE5_TEST_REPORT.md  README.md  pyproject.toml
Phase-1/.claude/agents/: backend-feature-builder.md  chatkit-backend-engineer.md  chatkit-frontend-engineer.md  fastapi-backend-expert.md  frontend-feature-builder.md  nextjs-frontend-expert.md
Phase-1/.claude/skills/backend-api-routes/: SKILL.md
Phase-1/.claude/skills/backend-database/: SKILL.md
Phase-1/.claude/skills/backend-error-handling/: SKILL.md
Phase-1/.claude/skills/backend-export-import/: SKILL.md
Phase-1/.claude/skills/backend-jwt-auth/: SKILL.md
Phase-1/.claude/skills/backend-service-layer/: SKILL.md
Phase-1/.claude/skills/backend-testing/: SKILL.md
Phase-1/.claude/skills/frontend-api-client/: SKILL.md
Phase-1/.claude/skills/frontend-types/: SKILL.md
Phase-1/.specify/memory/: constitution.md
Phase-1/data/: tasks.json
Phase-1/history/prompts/006_exit_app/: 0003-implement-exit-app.green.prompt.md
Phase-1/history/prompts/constitution/: 0001-create-initial-constitution.constitution.prompt.md
Phase-1/history/prompts/general/: 0001-initial-greeting.general.prompt.md  0002-create-phase-1-specs.general.prompt.md  0003-create-phase-1-plans.general.prompt.md  0004-create-phase-1-master-plan.general.prompt.md  0004-polish-and-cross-cutting.refactor.prompt.md  0005-commit-and-pr.misc.prompt.md  0008-phase-3-add-task.implement.prompt.md  (+1 more)
Phase-1/specs/phase_1/: tasks.md
Phase-1/src/: __init__.py
Phase-1/src/models/: task.py
Phase-1/src/ui/: cli_controller.py
Phase-1/tests/: test_task.py
Phase-2/backend/: .env.example  .flake8  ADVANCED_FEATURES_PLAN.md  API_ENDPOINTS_FOR_FRONTEND.md  APPLY_FIX_GUIDE.md  COMPLETE_AUTH_FIX.py  Dockerfile  ENUM_FIX_FINAL.md  FINAL_FIX_APPLIED.md  FIXED_SIGNUP_FUNCTION.py  FIXES_APPLIED.md  FIX_APPLIED_SUCCESS.md  FIX_ENUM_INSTRUCTIONS.md  NOTIFICATIONS_ENABLED_BACKGROUND.md  NOTIFICATION_DISABLED.md  NOTIFICATION_FIX.md  NOTIFICATION_FIX_APPLIED.md  PROFILE_UPDATES_COMPLETE.md  README.md  README_HF.md  ROUTE_ORDER_FIX_NEEDED.md  TOTAL_APIS_SUMMARY.md  add_due_date_column.sql  add_due_date_migration.py  add_enum_values.py  add_priority_column.sql  add_priority_migration.py  add_profile_fields.sql  add_soft_delete_columns.sql  add_task_due_soon_enum.py  check_enum.py  fix_enum.sql  pyproject.toml  render.yaml  requirements.txt  test.db  test.env  test_neon_working.py  test_push_notification.py  vapid_keys.pem
Phase-2/backend/src/: cli_main.py  config.py  db.py  main.py
Phase-2/backend/src/models/: task.py  (+3 more)
Phase-2/backend/tests/: conftest.py  test_auth.py  test_edge_cases.py  test_task.py  test_task_manager.py  test_tasks.py  test_user_isolation.py
(+691 files in other folders)
